# ReactionMechanizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: index.html
docs/pathway/: index.html  reaction.html
docs/reaction_mechanizer/drawing/: index.html  mechanism_reaction_visualizer.html
docs/reaction_mechanizer/pathway/: index.html  reaction.html
docs/v1.0.0/drawing/: mechanism_reaction_visualizer.html
docs/v1.1.0/drawing/: mechanism_reaction_visualizer.html
docs/v1.1.0/pathway/: reaction.html
docs/v1.1.1/: index.html
docs/v1.1.1/drawing/: index.html  mechanism_reaction_visualizer.html
src/reaction_mechanizer/drawing/: mechanism_reaction_visualizer.py
src/reaction_mechanizer/pathway/: reaction.py
tests/: test_reaction.py  test_visualization.py
