[metadata]
name = ReactionMechanizer
description = simulate reactions from proposed steps/mechanisms
author = Armaan Ahmed
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    reaction_mechanizer
install_requires =
    matplotlib>=3.5
    numpy>=1.21
    pandas>=1.3
    seaborn>=0.11
    scipy>=1.7
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=3.0
    mypy>=0.942
    flake8>=4.0
    tox>=3.24

[options.package_data]
reaction_mechanizer = py.typed

[flake8]
max-line-length = 160